--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,13 +9,14 @@ android:versionName="1.41">
     android:minSdkVersion="10"
     android:targetSdkVersion="19"/>
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <uses-feature android:name="android.hardware.screen.landscape"/>
     <uses-feature android:name="android.hardware.touchscreen"/>
 
     <application
+    android:name="MyApplication"
     android:label="@string/app_name"
     android:icon="@drawable/ic_launcher">
 
@@ -45,21 +46,7 @@ android:versionName="1.41">
         </activity>
 
         <activity
-        android:name="SinglePlayerGameSetupActivity"
-        android:label="@string/app_name"
-        android:screenOrientation="landscape"
-        android:configChanges="orientation|keyboardHidden">
-        </activity>
-
-        <activity
-        android:name="MultiplayerGameSetupActivity"
-        android:label="@string/app_name"
-        android:screenOrientation="landscape"
-        android:configChanges="orientation|keyboardHidden">
-        </activity>
-
-        <activity
-        android:name="ClientGameSetupActivity"
+        android:name="GameSetupActivity"
         android:label="@string/app_name"
         android:screenOrientation="landscape"
         android:configChanges="orientation|keyboardHidden">
@@ -67,20 +54,6 @@ android:versionName="1.41">
 
         <activity
         android:name="GameActivity"
-        android:label="@string/app_name"
-        android:screenOrientation="landscape"
-        android:configChanges="orientation|keyboardHidden">
-        </activity>
-
-        <activity
-        android:name="GameServerActivity"
-        android:label="@string/app_name"
-        android:screenOrientation="landscape"
-        android:configChanges="orientation|keyboardHidden">
-        </activity>
-
-        <activity
-        android:name="GameClientActivity"
         android:label="@string/app_name"
         android:screenOrientation="landscape"
         android:configChanges="orientation|keyboardHidden">
