--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,7 @@ android:versionName="1.41">
     <application
     android:name="MyApplication"
     android:label="@string/app_name"
+    android:allowBackup="false"
     android:icon="@drawable/ic_launcher">
 
         <activity
