--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,28 +33,21 @@ android:versionName="1.41">
         </activity>
 
         <activity
-        android:name="InstructionsActivity"
+        android:name="SettingsActivity"
         android:label="@string/app_name"
         android:screenOrientation="landscape"
         android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
-        android:name="MultiplayerMenuActivity"
+        android:name="AboutActivity"
         android:label="@string/app_name"
         android:screenOrientation="landscape"
         android:configChanges="orientation|keyboardHidden">
         </activity>
 
         <activity
-        android:name="GameSetupActivity"
-        android:label="@string/app_name"
-        android:screenOrientation="landscape"
-        android:configChanges="orientation|keyboardHidden">
-        </activity>
-
-        <activity
-        android:name="GameActivity"
+        android:name=".Client"
         android:label="@string/app_name"
         android:screenOrientation="landscape"
         android:configChanges="orientation|keyboardHidden">
